NEW FEATURE:  Song list can handle any number of groups.
BUG FIX:  Fix joystick Y axis.
NEW FEATURE:  Add level 8 judge difficulty.
CHANGE:  While AutoPlay is on, life, score, and dance points will not 
	accumulate.
CHANGE:  DWI save support added to editor.
NEW FEATURE:  Editor can edit BackgroundChanges.  Use the 'B' key.
NEW FEATURE:  Delayed escape/back key is now optional.
CHANGE:  Slow-motion is now ~ instead of LShift.
BUG FIX:  Fix pump doubles offset.
NEW FEATURE:  Support for #DIFFICULTY in KSF.
CHANGE:  Allow starting without a keyboard or mouse.
NEW FEATURE:  Support for "artist - title - difficulty" titles in KSF.
BUG FIX:  Fix repeating announcer when you get a 100*n combo and break it
	at the 100*n+1st step.
BUG FIX:  When skipping the evaluation screen, stop spinning the grade
	so it can be seen during fade out.
NEW FEATURE:  Backspace and delete can be used (in addition to space) to
	remove key mappings.
NEW FEATURE:  The caution screen can be backed out of.
CHANGE:  A game that doesn't have any note skins installed is now invisible on 
	the Select Game screen.  This can be used to selectively disable a game.
CHANGE:  Graphics and sounds now more compressed more for a smaller download.
CHANGE:  The "Difficulty Banner" (displayed while dancing) is now a graphic
	that can be overwritten by themes.
CHANGE:  An invalid character in a DWI file is now a warning, not a Fatal Error.
BUG FIX:  Fixed "blinky arrows".
CHANGE:  Note Skin format has changed.  Now supports MAX-style holds.
OPTIMIZATION:  Improved font alignment.  Scaled fonts now appear less blurry.
BUG FIX:  Random Movies no longer upside down.
NEW FEATURE:  Extra stage top and bottom bars now reversed
NEW FEATURE:  Most graphical elements can be positioned per theme using 
    metrics.ini in the theme folder.  See the theme section of the readme for 
	more info.
BUG FIX:  Autoplay no longer misses the first step if it lies on beat 0.
NEW FEATURE:  Support for holds notes in KSF.