@@ -34,8 +34,6 @@ public:
 // Implementation
 
 	//{{AFX_MSG(CSmpackageApp)
-		// NOTE - the ClassWizard will add and remove member functions here.
-		//    DO NOT EDIT what you see in these blocks of generated code !
 	//}}AFX_MSG
 	DECLARE_MESSAGE_MAP()
 };
